--- a/Client/templates/index.html
+++ b/Client/templates/index.html
@@ -1,1 +1,74 @@
-Hello World!
+{% extends "base.html" %}
+{% block title %}Federated Inventory Management Service{% endblock %}
+{% block content %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+<div class="container-fluid">
+    <div class="container text-center" style="background-image: url('/static/images/cat.jpg')">
+        <div class="row align-items-start">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='images/cat.jpg') }}" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Train the Model</h5>
+                  <p class="card-text">Training the Model will call a HTTP request from the server side to give you the newest up-to-date model and store it locally and train it locally</p>
+                  <a href="/trainModel" class="btn btn-primary">Claim Model!</a>
+                </div>
+            </div>
+              
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='images/cat2.jpg') }}" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Predict the restock</h5>
+                  <p class="card-text">Become Jesus Christ. You are now Jesus Christ. Cat Jesus Christ is also ok.</p>
+                  <a href="/predict" class="btn btn-primary">Prediction Magicks!</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='images/cat3.jpg') }}" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Send the Model to the Server</h5>
+                  <p class="card-text">Sending the Model to the Server will allow the centralized database to aggregate your model and further improve your future predictions!</p>
+                  <a href="/sendModel" class="btn btn-primary">Delivery Service!</a>
+                </div>
+            </div>
+
+        </div>
+      </div>
+</div>
+{% endblock %}
