Added the entire patient form with validation

--- a/Client/templates/index.html
+++ b/Client/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Federated Inventory Management Service{% endblock %}
+{% block title %}Diabetes Pre-Diagnostics Prediction Service{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <div class="container text-center" style="background-image: url('/static/images/cat.jpg')">
