--- a/Client/templates/questions.html
+++ b/Client/templates/questions.html
@@ -1,16 +1,59 @@
 {% extends "base.html" %}
-{% block title %}Federated Inventory Management Service{% endblock %}
+{% block title %}Questionnaire{% endblock %}
 {% block content %}
+
 <form action="/questions" method = "post">
-    <div class="container-fluid">
-        <div class="container text-center" style="background-image: url('/static/images/cat.jpg')">
-            <p>Q1: Do you have high blood pressure?</p>
-              <input type="radio" id="0" name="q1" value="Low Blood Pressure">
-              <label for="q1">Low Blood Pressure</label><br>
-              <input type="radio" id="1" name="q1" value="High Blood Pressure">
-              <label for="q1">High Blood Pressure</label><br>
-            <input type="submit" value="Submit">
-        </div>
-    </div>
+    {{ form.csrf_token }}
+    {{ form.hidden_tag() }}<!--style="background-image: url('/static/images/cat.jpg')"-->
+    <!--  <div class="container text-center" style="background-image: url('/static/images/cat.jpg')">-->
+   <div class="container-fluid" style ="background: linear-gradient(45deg, #55C8FF8E, #2282FF8E);">
+        <br><div>{{ form.q1.label }}
+        {{ form.q1() }}</div><br>
+
+        <div>{{ form.q2.label }}
+        {{ form.q2() }}</div><br>
+
+        <div>{{ form.q3.label }}
+        {{ form.q3() }}</div><br>
+
+        <div>{{ form.q4.label }}<br>
+        {{ form.q4() }}</div><br>
+
+        <div>{{ form.q5.label }}
+        {{ form.q5() }}</div><br>
+
+        <div>{{ form.q6.label }}
+        {{ form.q6() }}</div><br>
+        
+        <div>{{ form.q7.label }}
+        {{ form.q7() }}</div><br>
+
+        <div>{{ form.q8.label }}
+        {{ form.q8() }}</div><br>
+
+        <div>{{ form.q9.label }}
+        {{ form.q9() }}</div><br>
+
+        <div>{{ form.q10.label }}
+        {{ form.q10() }}</div><br>
+
+        <div>{{ form.q11.label}}
+        {{ form.q11() }}</div><br>
+
+        <div>{{ form.q12.label }}
+        {{ form.q12() }}</div><br>
+
+        <div>{{ form.q13.label }}
+        {{ form.q13() }}</div><br>
+
+        <div>{{ form.q14.label }}
+        {{ form.q14() }}</div><br>
+
+        <div>{{ form.q15.label }}
+        {{ form.q15() }}</div><br>
+
+        {{ form.submit() }}
+        <br><br><br>
+      </div>
 </form>
 {% endblock %}
