--- a/Client/templates/base.html
+++ b/Client/templates/base.html
@@ -22,6 +22,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/doctors">Doctors Hub</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/trainModel">Train Data</a>
+            </li>
           </ul>
         </div>
       </div>
