--- a/Client/templates/base.html
+++ b/Client/templates/base.html
@@ -6,9 +6,9 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body style="background: linear-gradient(#FFAF0089,#E562F684); min-height: 100vh;">
+  <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style ="background: linear-gradient(270deg,#254DFFE0, #65C7FFE0);">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style ="background: linear-gradient(#6dbd6a, #6dbd6a);">
       <div class="container-fluid">
         <a class="navbar-brand" href="/"><b>Home</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
