--- a/Client/templates/index.html
+++ b/Client/templates/index.html
@@ -20,23 +20,23 @@
       <div class="col-md-4">
           <!-- First Infographic Div -->
           <div class="infographic">
-              <img src="{{ url_for('static', filename='images/cat.jpg') }}" class="img-fluid" alt="Infographic 1">
+              <img src="{{ url_for('static', filename='images/diabetes1.jpg') }}" class="img-fluid" alt="Infographic 1">
               <div class="infographic-caption">
-                  <p>Infographic Description</p>
+                  <p><b>Rapid growth of diabetes in Singapore</b></p>
               </div>
           </div>
           <!-- Second Infographic Div -->
           <div class="infographic">
-              <img src="{{ url_for('static', filename='images/cat2.jpg') }}" class="img-fluid" alt="Infographic 2">
+              <img src="{{ url_for('static', filename='images/diabetes3.jpg') }}" class="img-fluid" alt="Infographic 2">
               <div class="infographic-caption">
-                  <p>Infographic Description</p>
+                  <p><b>Do you want to live your life like that?</b></p>
               </div>
           </div>
 
           <div class="infographic">
-            <img src="{{ url_for('static', filename='images/cat3.jpg') }}" class="img-fluid" alt="Infographic 2">
+            <img src="{{ url_for('static', filename='images/diabetes2.jpg') }}" class="img-fluid" alt="Infographic 2">
             <div class="infographic-caption">
-                <p>Infographic Description</p>
+                <p><b>Diabetic statistical breakdown</b></p>
             </div>
         </div>
           <!-- ... (add more images here) ... -->
