--- a/Client/templates/questions.html
+++ b/Client/templates/questions.html
@@ -49,7 +49,7 @@
         <div>{{ form.q11.label}}
         {{ form.q11() }}</div><br>
 
-        <div>{{ form.q12.label }}
+        <div>{{ form.q12.label }}<br>
         {{ form.q12() }}</div><br>
 
         <div>{{ form.q13.label }}
