--- a/Client/templates/results.html
+++ b/Client/templates/results.html
@@ -2,12 +2,8 @@
 {% block title %}Diabetes Pre-Diagnostics Prediction Service{% endblock %}
 {% block content %}
 
-<div class="container mt-4"><!--style="background: linear-gradient(45deg, #EF32FF8E, #2282FF8E);"-->
-  <div class="row">
-      <!-- Left Column for Text Content -->
-      <div class="col-md-8">
-        <p>Prediction Result: You likely {{ prediction_result }}</p>
-  </div>
+<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 85vh; font-size:50px;">
+        <b><p>Prediction Result: You likely {{ prediction_result }}</p></b>
 </div>
 
 {% endblock %}
